-*- mode:flyspell; -*-

$Id$

Changes since v1.9
==================

o Modified the line parsing code so that if a colour attribute is in effect
  and a new attribute marker of the same value is seen it reverts to the
  normal text colour.

Changes since v1.8
==================

o Modified the entry viewer component so that it doesn't create and free a
  painter for each draw action. Instead just create the painters once and
  reuse them.

o Modified the entry class so that it doesn't create and free a line
  stripper object for each line in the entry. Instead just create the
  stripper once and reuse it.

o Modified wegLibExpand() so that it tries to do something sensible if an
  author of a guide has used two consecutive "hard spaces" (which would
  result in 255 spaces being inserted when the author probably wanted two
  consecutive spaces).

Changes since v1.7
==================

o Added a TimeStamp property to the Norton Guide class.

o Modified the back-track history so that it only adds the current location
  to the history if the new location is different from the current location
  (including the highlighted line).

Changes since v1.6
==================

o Added the entryPath() method to the entry viewer component.

o Added the entryTitle() method to the entry viewer component.

o Increased the max length of a menu and see-also title.

Changes since v1.5
==================

o Improved the code in the entry viewer that worked out how wide a
  horizontal scrollbar should be.

o Improved the code in the entry viewer that worked out how tall an a line
  is for a given font.

o The global finder now records the title of the guide as well as the name
  of the file.
  
Changes since v1.4
==================

o The entry viewer now properly checks that a given offset is a real short
  or long entry.

o Fixed a bug in the line parser that would cause some parts of some lines
  to not observe the current OEMToANSI setting.

Changes since v1.3
==================
